--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </table>
 
     <!-- table with order status start -->
-<table class="Wrapper" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0"> 
+<table class="wrapper" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0"> 
     <tbody>
         <tr> 
             <td style="background-color:transparent; border-top-style: none; border-bottom-style: none; border-right-style: none; border-left-style: none; border-top-width: 0px; border-bottom-width: 0px; border-right-width: 0px; border-left-width: 0px; border-color: #222222;" align="center"> 
@@ -176,7 +176,7 @@
 </td> </tr> </tbody></table> <!--[if(gte mso 9)|(IE)]></td> </tr> </table><![endif]--> </td> </tr> </tbody></table> </td> </tr> </tbody></table>
     <!-- table with order status end -->
     <!-- navigation table start -->
-    <table class="Wrapper" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
+    <table class="wrapper" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
         <tbody>
             <tr>
                 <td style="background-color: transparent; border-top-style: none; border-bottom-style: none; border-right-style: none; border-left-style: none; border-color: #222222;">
@@ -273,11 +273,21 @@
         </tbody>
     </table>
     <!-- navigation table end -->
-    <table class="wrapper">
+    <table class="wrapper" role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-                <td>
-                    
+                <td style="background-color: trannsparent; border-top-style: none; border-right-style: none; border-bottom-style: none; border-left-style: none; border-width: 0px; border-color: #222222;" align="center">
+                    <!-- [if(gte mso 9)| (IE)]><table width="600" cellpadding="0" cellspacing="0" border="0" 
+                        style="width: 600px" role="presentation"> <tr> <td> align="center"><![endif] -->
+                            <table class="container" style="max-width: 600px;" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
+                                <tr>
+                                    <td>
+                                        <table>
+                                        <!-- left off get back to tomorrow morning -->
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
                 </td>
             </tr>
         </tbody>
