--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
         </tbody>
     </table>
     <!-- navigation table end -->
+
+    <!-- wrapper table with img start-->
     <table class="wrapper" role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
@@ -281,16 +283,84 @@
                         style="width: 600px" role="presentation"> <tr> <td> align="center"><![endif] -->
                             <table class="container" style="max-width: 600px;" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
                                 <tr>
-                                    <td>
-                                        <table>
-                                        <!-- left off get back to tomorrow morning -->
+                                    <td style="background-color: transparent;" align="center">
+                                        <table class="column-1" role="presentation" width="100%" cellpsacing="0" cellpadding="0" border="0">
+                                            <tbody>
+                                                <tr>
+                                                    <td align="center">
+                                                        <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
+                                                            <tbody>
+                                                                <tr class="image">
+                                                                    <td style="padding: 0px 0px 0px 0px;" align="center">
+                                                                        <a href="http://link.purehockey.com/q/WCPLOyAZwDT90YyC7L2FusHYQbN4Ld633cacZcOJYWd1YXlvZXJpYzE3QGdtYWlsLmNvbcOIACuL6ilUc7LcHKe-BGanpRggpgg" 
+                                                                        title="" 
+                                                                        target="_blank" 
+                                                                        data-link-name="CCM Tacks AS-V Pro Protective Pre-Order">
+                                                                            <img src="https://mediacdn.espssl.com/10088/PH-5-18-22_A1.jpg" alt="CCM Tacks AS-V Pro Protective Pre-Order" 
+                                                                            style="display:block; width: 100%; max-width: 1280px !important;border:0px;" width="600">
+                                                                        </a>
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
                                         </table>
                                     </td>
                                 </tr>
                             </table>
+                            <!-- [if(gte mso 9) | (IE)></td> </tr></table><![endif] -->
                 </td>
             </tr>
         </tbody>
     </table>
+<!-- wrapper table with img end -->
+
+<!-- table img for shoulder pads starts -->
+<table class="wrapper" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
+    <tbody>
+        <tr>
+            <td style="background-color: transparent; border-top-style: none; border-right-style: none; border-bottom-style: none; border-left-style: none;">
+                <table class="row-spacing" role="presentation" cellpadding="0" border="0">
+                    <tbody>
+                        <tr>
+                            <td style="padding: 10px 0px 0px 0px;">
+                                <!-- [if(gte mso 9)|(IE)]><table width="600" cellpadding="0" cellspacing="0" border="0" style="width: 600px;" 
+                                    role="presentation"><tr><td align="center"><![endif] -->
+                                <table class="container" style="max-width: 600px;" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
+                                    <tbody>
+                                        <tr>
+                                            <td style="background-color: transparent;" align="center">
+                                                <table class="column-1">
+                                                    <tbody>
+                                                        <tr>
+                                                            <td align="center">
+                                                                <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
+                                                                    <tbody>
+                                                                        <tr class="image">
+                                                                            <td>
+
+                                                                            </td>
+                                                                        </tr>
+                                                                    </tbody>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<!-- table img for shoulder pads end -->
 </body>
 </html>
