--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 <table class="wrapper" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
     <tbody>
         <tr>
-            <td style="background-color: transparent; border-top-style: none; border-right-style: none; border-bottom-style: none; border-left-style: none;">
+            <td style="background-color: transparent; border-top-style: none; border-right-style: none; border-bottom-style: none; border-left-style: none;" align="center">
                 <table class="row-spacing" role="presentation" cellpadding="0" border="0">
                     <tbody>
                         <tr>
@@ -339,8 +339,14 @@
                                                                 <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
                                                                     <tbody>
                                                                         <tr class="image">
-                                                                            <td>
-
+                                                                            <td style="padding: 0px 0px 0px 0px;" align="center">
+                                                                                <a href="http://link.purehockey.com/q/JKPT8hCtwlEb0Ys86aJFAnUkKr6Dah4ta5X5ZcOJYWd1YXlvZXJpYzE3QGdtYWlsLmNvbcOIKbF82jU1e6LAK5UXvTGon1CGzdQ" 
+                                                                                title="" 
+                                                                                target="_blank" 
+                                                                                data-link-name="CCM Tacks AS-V Pro Shoulder Pads">
+                                                                                <img src="https://mediacdn.espssl.com/10088/PH-5-18-22_B1.jpg" alt="CCM Tacks AS-V Pro Shoulder Pads" 
+                                                                                    style="display:block; width: 100%; max-width: 1280px !important;border:0px;" width="600">
+                                                                                </a>
                                                                             </td>
                                                                         </tr>
                                                                     </tbody>
@@ -353,6 +359,7 @@
                                         </tr>
                                     </tbody>
                                 </table>
+                                <!-- [if(gte mso 9)|(IE)></td> </tr></table><![endif] -->
                             </td>
                         </tr>
                     </tbody>
@@ -362,5 +369,60 @@
     </tbody>
 </table>
 <!-- table img for shoulder pads end -->
+
+<!-- table img elbow pads start -->
+<table class="wrapper" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
+    <tbody>
+        <tr>
+            <td style="background-color: transparent; border-top-style:none; border-right-style:none; border-bottom-style:none; border-left-style:none; border-color: #222222;" align="center">
+                <table class="row-spacing" role="presentation" width="100%" cellpadding="0" border="0">
+                    <tbody>
+                        <tr>
+                            <td style="padding: 10px 0px 0px 0px;" align="center">
+                                <!-- [if(gte mso 9)| (IE)><table width="600" cellpadding="0" cellspacing="0" border="0" 
+                                    style="width: 600px;" role="presentation"> <tr> <td> align="center"><![endif] 
+                                    -->
+                                    <table class="container" style="max-width: 600px;" role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+                                       <tbody>
+                                        <tr>
+                                            <td style="background-color: transparent;" align="center">
+                                                <table class="column-1" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="">
+                                                    <tbody>
+                                                        <tr>
+                                                            <td align="center">
+                                                                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+                                                                    <tbody>
+                                                                        <tr class="image">
+                                                                            <td style="padding: 0px 0px 0px 0px;" align="center">
+                                                                                <a href="http://link.purehockey.com/q/vkxcY6VYn-3k0Yn-QcB1kYS1OfGVcY4cuH9HZcOJYWd1YXlvZXJpYzE3QGdtYWlsLmNvbcOIOMm-otQ4daLdVZtFguDXpKzDLtw" 
+                                                                                title="" 
+                                                                                target="_blank" 
+                                                                                data-link-name="CCM Tacks AS-V Pro Elbow Pads">
+                                                                                <img src="https://mediacdn.espssl.com/10088/PH-5-18-22_B2.jpg" alt="CCM Tacks AS-V Pro Elbow Pads" 
+                                                                                    style="display:block; width: 100%; max-width: 1280px !important;border:0px;" 
+                                                                                    width="600">
+                                                                                </a>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </tbody>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                       </tbody>
+                                    </table>
+                                    <!-- [if(gte mso 9)|(IE)></td> </tr></table><![endif] -->
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<!-- table img elbow pads end -->
 </body>
 </html>
