--- a/index.html
+++ b/index.html
@@ -424,5 +424,65 @@
     </tbody>
 </table>
 <!-- table img elbow pads end -->
+
+<!-- table shin pads start -->
+<table class="wrapper" role="presentation" cellpadding="0" cellspacing="0" border="0">
+    <tbody>
+        <tr>
+            <td style="background-color: transparent; border-top-style: none; 
+            border-right-style: none; border-bottom-style: none; 
+            border-left-style: none; border-color: #222222;" 
+            width="100%" align="center">
+            <!-- row spacing -->
+            <table class="row-spacing" role="presentation" cellpadding="0" cellspacing="0" border="0" style="width:600px;">
+                <tbody>
+                    <tr>
+                        <td style="padding: 10px 0px 0px 0px;">
+                             <!-- [if(gte mso 9)| (IE)><table width="600" cellpadding="0" cellspacing="0" border="0" 
+                                    style="width: 600px;" role="presentation"> <tr> <td> align="center"><![endif] 
+                                    -->
+                                    <table class="container" style="max-width: 600px;" width="100%" role="presentation" cellpadding="0" cellspacing="0" border="0">
+                                        <tbody>
+                                            <tr>
+                                                <td style="background-color: transparent;" align="center">
+                                                    <table class="column-1" role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+                                                        <tbody>
+                                                            <tr>
+                                                                <td align="center">
+                                                                    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+                                                                        <tbody>
+                                                                            <tr class="image">
+                                                                                <td style="padding: 0px 0px 0px 0px;">
+                                                                                    <a href="http://link.purehockey.com/q/W2TmaTtVG8Ne0YGdeiunKKSwQdUKiE8bqLVLZcOJYWd1YXlvZXJpYzE3QGdtYWlsLmNvbcOIwD6cfhyqcZL7yrfidCh0ED8g8lQ" 
+                                                                                    title="" 
+                                                                                    target="_blank" 
+                                                                                    data-link-name="CCM Tacks AS-V Pro Shin Pads">
+                                                                                    <img src="https://mediacdn.espssl.com/10088/PH-5-18-22_B3.jpg" alt="CCM Tacks AS-V Pro Shin Pads" 
+                                                                                        style="display:block; width: 100%; max-width: 1280px !important;border:0px;" width="600">
+                                                                                    </a>
+                                                                                </td>
+                                                                            </tr>
+
+                                                                        </tbody>
+                                                                    </table>
+                                                                </td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                   <!-- [if(gte mso 9)|(IE)></td> </tr></table><![endif] -->
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <!-- row spacing -->
+            </td>
+        </tr>
+    </tbody>
+</table>
+<!-- table shin pads end -->
 </body>
 </html>
