--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             <table class="row-spacing" role="presentation" cellpadding="0" cellspacing="0" border="0" style="width:600px;">
                 <tbody>
                     <tr>
-                        <td style="padding: 10px 0px 0px 0px;">
+                        <td style="padding: 10px 0px 0px 0px;" align="center">
                              <!-- [if(gte mso 9)| (IE)><table width="600" cellpadding="0" cellspacing="0" border="0" 
                                     style="width: 600px;" role="presentation"> <tr> <td> align="center"><![endif] 
                                     -->
@@ -484,5 +484,119 @@
     </tbody>
 </table>
 <!-- table shin pads end -->
+
+<!-- table shop accessories start -->
+<table class="wrapper" role="presentation" cellpadding="0" cellspacing="0" border="0">
+    <tbody>
+        <tr>
+            <td style="background-color: transparent; border-top-style: none; 
+            border-right-style: none; border-bottom-style: none; 
+            border-left-style: none; border-color: #222222;" 
+            width="100%" align="center">
+            <table class="row-spacing" width="100%" cellpadding="0" border="0">
+                <tbody>
+                    <tr>
+                        <td style="padding: 10px 0px 0px 0px;">
+                             <!-- [if(gte mso 9)| (IE)><table width="600" cellpadding="0" cellspacing="0" border="0" 
+                                    style="width: 600px;" role="presentation"> <tr> <td> align="center"><![endif] 
+                                    -->
+                            <table class="container" role="presentation" style="max-width: 600px;" width="100%" cellspacing="0" cellpadding="0" border="0">
+                                <tbody>
+                                    <tr>
+                                        <td style="background-color: transparent;" align="center">
+                                            <table class="column-1" role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
+                                                <tbody>
+                                                    <tr>
+                                                        <td align="center">
+                                                            <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
+                                                                <tbody>
+                                                                    <tr class="image">
+                                                                        <td style="padding: 0px 0px 0px 0px;">
+                                                                            <a href="http://link.purehockey.com/q/4l1n7TiswKFd0YSuZhfxU2iQBCRyhxQYIVDVZcOJYWd1YXlvZXJpYzE3QGdtYWlsLmNvbcOI8bomKNhZdILG4k0Twq9XqT_m4Lw" 
+                                                                            title="" 
+                                                                            target="_blank" 
+                                                                            data-link-name="Shop Our Top Accessories">
+                                                                            <img src="https://mediacdn.espssl.com/10088/PH-5-18-22_B4.jpg" alt="Shop Our Top Accessories" 
+                                                                                style="display:block; width: 100%; max-width: 1284px !important;border:0px;" 
+                                                                                width="600">
+                                                                            </a>
+                                                                        </td>
+                                                                    </tr>
+                                                                </tbody>
+                                                            </table>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>    
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                             <!-- [if(gte mso 9)|(IE)></td> </tr></table><![endif] -->
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<!-- table shop accessories end -->
+
+<!-- recommeded table sales start -->
+<table class="wrapper" role="presentation" cellpadding="0" cellspacing="0" border="0">
+    <tbody>
+        <tr>
+            <td style="background-color: transparent; border-top-style: none; 
+            border-right-style: none; border-bottom-style: none; 
+            border-left-style: none; border-color: #222222;" 
+            width="100%" align="center">
+            <!-- [if(gte mso 9)| (IE)><table width="600" cellpadding="0" cellspacing="0" border="0" 
+                                    style="width: 600px;" role="presentation"> <tr> <td> align="center"><![endif] 
+                                    -->
+            <table class="container" role="presentation" style="max-width: 600px;" width="100%" cellspacing="0" cellpadding="0" border="0">
+                <tbody>
+                    <tr>
+                        <td style="background-color: transparent;" align="center">
+                            <table class="column-1" role="presentation" cellpadding="0" cellspacing="0" border="0">
+                                <tbody>
+                                    <tr>
+                                        <td align="center">
+                                            <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+                                                <tbody>
+                                                    <tr class="html">
+                                                        <td style="font-family: Arial; font-size: 16px;">
+                                                            <!-- recommeded blocks -->
+                                                            <table width="1" height="1" cellspacing="0" cellpadding="0" border="0">
+                                                                <tbody>
+                                                                    <tr>
+                                                                        <td style="font-size: 0px; line-height: 0px;">
+                                                                            <img src="https://mi.purehockey.com/p/cp/2b9edd59c4b417af/o.gif?mi_u=64F164C70505E49115A9147FA1" 
+                                                                            alt="" aria-hidden="true" width="1" height="1">
+                                                                        </td>
+                                                                    </tr>
+                                                                </tbody>
+                                                            </table>
+                                                        </td>   
+                                                    </tr>
+                                                </tbody>
+
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<table class="column-1">
+    
+</table>
+<!-- recommeded table sales start -->
 </body>
 </html>
