--- a/index.html
+++ b/index.html
@@ -594,9 +594,37 @@
         </tr>
     </tbody>
 </table>
-<table class="column-1">
+<table class="column-1" role="presentation" cellpadding="0" cellspacing="0" border="0">
+    <tbody>
+        <tr>
+            <td align="center">
+                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
+                    <tbody>
+                        <tr class="text">
+                            <td style="padding: 10px 10px 10px 10xp; border-width: 0px; 
+                            font-weight: normal; font-size: 16px; line-height: 1.5; 
+                            text-align: center; color: #222222;">
+                                <p style="margin: 0px; padding: 0px;">
+                                <span style="font-size: 18px;">
+                                    <u>
+                                        <b>RECOMMENDED FOR YOU</b>
+                                    </u>
+                                </span>
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<!-- column 2 table start -->
+<table class="column-2">
     
 </table>
+<!-- column 2 table end -->
 <!-- recommeded table sales start -->
 </body>
 </html>
