added images folder

--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@ h1, h2, h3, h4, h5, h6 {
                                             <tr class="html">
                                                 <td style="font-family: Arial; font-size: 16px;">
                                                     <a href="http://link.purehockey.com/q/AT6zxkRbu4jf0Y0HFhW8XCjx5pA0h37u45O5ZcOJYWd1YXlvZXJpYzE3QGdtYWlsLmNvbcOIGB21HLAndILHBdxrRvAhkaBAfvA" style="display: block">
-                                                        <img alt="Display images to show real-time content" style="border: 0; display: block; max-width:145px" src="https://mi.purehockey.com/p/rp/327455fea8b1a666.png?" width="145" border="0">
+                                                        <img alt="Display images to show real-time content" style="border: 0; display: block; max-width:145px" src="images/bauer-supreme-mach.jpg" width="145" border="0">
                                                     </a>
                                                 </td>
                                             </tr>
@@ -935,7 +935,7 @@ h1, h2, h3, h4, h5, h6 {
                                                     <a href="http://link.purehockey.com/q/1d5-RshPqGVa0YabETKYQk0Exn-CTdhLL7I7ZcOJYWd1YXlvZXJpYzE3QGdtYWlsLmNvbcOIUpd6GCJTfpLZ29BW75PMr-FqVcw" style="display: block">
                                                         <img alt="Display images to show real-time content" 
                                                         style="border: 0; display: block;max-width:145px" 
-                                                        src="https://mi.purehockey.com/p/rp/8c0f1ee81209bb16.png?" 
+                                                        src="images/bauer-supreme-3s.jpg" 
                                                         width="145" border="0">
                                                     </a>
                                                 </td>
@@ -960,7 +960,7 @@ h1, h2, h3, h4, h5, h6 {
                                                     <a href="http://link.purehockey.com/q/2QMbSOcSHCfj0Yv4l-UW7uZYdshP-tKEbL4LZcOJYWd1YXlvZXJpYzE3QGdtYWlsLmNvbcOIGq4yKijGe5LmEoiksyLJ2khKsOw" style="display: block">
                                                         <img alt="Display images to show real-time content" 
                                                         style="border: 0; display: block;max-width:145px" 
-                                                        src="https://mi.purehockey.com/p/rp/bc590f79b02c90d5.png?" width="145" border="0">
+                                                        src="images/bauer-supreme-ultrasonic.jpg" width="145" border="0">
                                                     
                                                     </a>
                                                 </td>
@@ -976,7 +976,7 @@ h1, h2, h3, h4, h5, h6 {
                                                     <a href="http://link.purehockey.com/q/-T4x3rgdBs9w0YdnxIRQ0JYLtZUjIbtL4WZWZcOJYWd1YXlvZXJpYzE3QGdtYWlsLmNvbcOI8DautXO7c5LHSeb_mIYBtXfg0pw" style="display: block">
                                                         <img alt="Display images to show real-time content" 
                                                         style="border: 0; display: block;max-width:145px" 
-                                                        src="https://mi.purehockey.com/p/rp/38ab6f0fe5f9bbc4.png?" 
+                                                        src="images/mission-inhaler.jpg" 
                                                         width="145" border="0">
                                                     </a>
                                                 </td>
@@ -1004,7 +1004,7 @@ h1, h2, h3, h4, h5, h6 {
                     <tr class="image">
                         <td style="padding: 0px 0px 0px 0px;" align="center">
                             <a href="http://link.purehockey.com/q/M8BdI9ZVMky-bvbeSZoM1E7ih6e91HCTL0YrTZcOJYWd1YXlvZXJpYzE3QGdtYWlsLmNvbcOIUmV3YXJkcyBQcm9maWxlIEZpZWxkc1xwb3N0YWxfY29kZcOJOTAyNDDDiAzEy3eQXBe6wnxEE2jBsyjcROvg" title="" target="_blank" data-link-name="Find A Store Near You">
-                                <img src="https://mi.purehockey.com/p/rp/d5b42f97c2a0adcd.png?mi_u=64F164C70505E49115A9147FA1&amp;mi_zip_default=90240" alt="Find A Store Near You" 
+                                <img src="images/pure-shop-stores.jpg" alt="Find A Store Near You" 
                                 style="display:block; width: 100%; max-width: 600px !important;border:0px;" 
                                 width="600">
                             </a>
