--- a/index.html
+++ b/index.html
@@ -215,6 +215,27 @@ h1, h2, h3, h4, h5, h6 {
     } 
     
     </style>
+    <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3104015,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8G9VQTVBT1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8G9VQTVBT1');
+</script>
+
 </head>
 <body style="margin: 0; padding: 0; min-width: 100%; background-color: #ffffff;">
     <!---------------------- body table start intro ----------------------->
@@ -269,7 +290,7 @@ h1, h2, h3, h4, h5, h6 {
                 </td>
             </tr>
             <!---------------------- view browser row end ------------------------------->
-        </table>
+    </table>
     <!---------------------- body table intro end ----------------------->
 
     <!-- wraper table start-->
