--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </script>
 
     </head>
-    <body style="margin: 0; padding: 0; min-width: 100%; background-color: #ffffff;">
+    <body style="margin: 0; padding: 0; min-width: 100%; background-color: #f2f2f2f2;">
         <!---------------------- body table start intro ----------------------->
         <table class="body" cellpadding="0" cellspacing="0" border="0" align="center">
             <!---------------------- view browser row start ------------------------------->
